k8s/traefik/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.3
          args:
            - --api.insecure
            - --accesslog
            # - --log.level=DEBUG
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetescrd
            - --pilot.token=48c3a161-489d-496a-8f92-33d514664e7d
            - --experimental.plugins.cncftaeplugin.modulename=github.com/sw360cab/cncftaeplugin
            - --experimental.plugins.cncftaeplugin.version=0.0.1
            - --certificatesresolvers.myresolver.acme.tlschallenge
            - --certificatesresolvers.myresolver.acme.email=foo@you.com
            - --certificatesresolvers.myresolver.acme.storage=acme.json
            # - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  - name: admin
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: webtls
    protocol: TCP
    port: 443
    targetPort: 443
  type: ClusterIP
  externalIPs:
    - 147.75.87.125 # Node1-IP
